--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,13 @@
             <version>5.9.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- Dependency needed to implement parameterized tests -->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+            <version>5.10.2</version>
+            <scope>test</scope>
+        </dependency>
 
         <!-- Mockito for mocking -->
         <dependency>
@@ -71,9 +78,6 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-surefire-plugin</artifactId>
             <version>2.22.2</version>
-            <configuration>
-                <skipTests>true</skipTests>
-            </configuration>
         </plugin>
     </plugins>
 
