Corrections to the logging exercise

--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,15 @@
             <version>1.7.36</version>
         </dependency>
 
+        <!--
+            I see the here you're using the slf4j API to send logging commands to loj4j.
+            Nothing wrong with that approach, although not a common practice.
+            That is for 2 reasons:
+            - There's already a reference implementation for slf4j (logback). For projects that
+              don't declare dependencies that use a different library, logback is usually the binding of choice.
+            - There might be performance implications due to the Facade pattern used in the bridge.
+              Beware we are not invoking the original, underlying logging API, but a layer on top of it.
+        -->
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
